--- a/negative-report.html
+++ b/negative-report.html
@@ -483,7 +483,7 @@ body.theme-light code {
 <div class="row">
   <div class="col-md-9 col-lg-12 main">
    <h1 class="display-2 text-center">Newman Run Dashboard</h1>
-   <h5 class="text-center">Wednesday, 21 January 2026 20:53:44</h5>
+   <h5 class="text-center">Wednesday, 21 January 2026 21:07:35</h5>
    <div class="row">
     <div class="col-lg-3 col-md-6">
      <div class="card text-white card-success">
@@ -551,7 +551,7 @@ body.theme-light code {
                 <div class="card-body">
                 <h5 class="card-title text-uppercase text-white text-center bg-info">Collection Description</h5>
                 <div class="dyn-height">
-                    <code class="renderMarkdown">Production-grade API testing framework for Danish Energi Data Service</code>
+                    <code class="renderMarkdown">API testing framework for Danish Energi Data Service</code>
                 </div>
                 </div>
             </div>
@@ -562,9 +562,9 @@ body.theme-light code {
             <div class="card border-info">
                 <div class="card-body">
                 <h5 class="card-title text-uppercase text-white text-center bg-info">Timings and Data</h5>
-                <span><i class="fas fa-stopwatch"></i></span><strong> Total run duration:</strong> 705ms<br>
+                <span><i class="fas fa-stopwatch"></i></span><strong> Total run duration:</strong> 593ms<br>
                 <span><i class="fas fa-database"></i></span><strong> Total data received:</strong> 24B<br>
-                <span><i class="fas fa-stopwatch"></i></span><strong> Average response time:</strong> 659ms<br>
+                <span><i class="fas fa-stopwatch"></i></span><strong> Average response time:</strong> 547ms<br>
                 </div>
             </div>
         </div>
@@ -652,22 +652,22 @@ body.theme-light code {
     <h6 class="text-uppercase text-muted" id="iterationSelected" style="padding-top: 10px;"></h6>
 	<div class="tab-content" id="execution-data">
         <div class="alert alert-dark text-uppercase text-center iteration-0">
-        <a data-toggle="collapse" href="#" data-target="#folder-collapse-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0" aria-expanded="false" aria-controls="collapse" id="folder-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0" class="collapsed text-dark z-block">
+        <a data-toggle="collapse" href="#" data-target="#folder-collapse-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0" aria-expanded="false" aria-controls="collapse" id="folder-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0" class="collapsed text-dark z-block">
         <i class="fas fa-info-circle float-left resultsInfoPass" ></i>
             99_Negative - 1 Request in the folder<i class="float-lg-right fa fa-chevron-down" style="padding-top: 5px;"></i>
         </a>
         </div>
-        <div id="folder-collapse-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0" class="collapse" aria-labelledby="folder-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5">
-            <div id="folder-062099a5-53a9-491c-9f2e-2800e99baf1c" class="card-deck iteration-0">
+        <div id="folder-collapse-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0" class="collapse" aria-labelledby="folder-2511500d-3d7e-405c-b565-34c4ae968191">
+            <div id="folder-ba4a985f-4efe-4892-b897-9aa34423b182" class="card-deck iteration-0">
             <div class="row iteration-0">
                 <div class="col-sm-12 mb-3 iteration-0">
                 <div class="card iteration-0">
                     <div class="card-header  bg-success iteration-0">
-                        <a data-toggle="collapse" href="#" data-target="#collapse-062099a5-53a9-491c-9f2e-2800e99baf1c" aria-expanded="false" aria-controls="collapse" id="requests-062099a5-53a9-491c-9f2e-2800e99baf1c" class="collapsed text-white z-block">
+                        <a data-toggle="collapse" href="#" data-target="#collapse-ba4a985f-4efe-4892-b897-9aa34423b182" aria-expanded="false" aria-controls="collapse" id="requests-ba4a985f-4efe-4892-b897-9aa34423b182" class="collapsed text-white z-block">
                     Iteration: 1 - TC-04: Invalid Start Format <i class="float-lg-right fa fa-chevron-down" style="padding-top: 5px;"></i>
                 </a>
                     </div>
-                    <div id="collapse-062099a5-53a9-491c-9f2e-2800e99baf1c" class="collapse" aria-labelledby="requests-062099a5-53a9-491c-9f2e-2800e99baf1c">
+                    <div id="collapse-ba4a985f-4efe-4892-b897-9aa34423b182" class="collapse" aria-labelledby="requests-ba4a985f-4efe-4892-b897-9aa34423b182">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-12 mb-3">
@@ -683,7 +683,7 @@ body.theme-light code {
                                     <div class="card-body">
                                     <h5 class="card-title text-uppercase text-white text-center bg-info">Response Information</h5>
                                     <span><i class="fas fa-info-circle"></i></span><strong> Response Code:</strong> <span class="float-right badge-outline badge badge-success"> 400 - Bad Request</span><br>
-                                    <span><i class="fas fa-stopwatch"></i></span><strong> Mean time per request:</strong> <span class="float-right badge-outline badge badge-success"> 659ms</span><br>
+                                    <span><i class="fas fa-stopwatch"></i></span><strong> Mean time per request:</strong> <span class="float-right badge-outline badge badge-success"> 547ms</span><br>
                                     <span><i class="fas fa-database"></i></span><strong> Mean size per request:</strong> <span class="float-right badge-outline badge badge-success"> 24B</span><br>
                                     <hr>
                                     <h5 class="card-title text-uppercase text-white text-center bg-info">Test Pass Percentage</h5>
@@ -723,7 +723,7 @@ body.theme-light code {
                                                     </tr>
                                                     <tr>
                                                         <td class="text-nowrap">Postman-Token</td>
-                                                        <td class="text-wrap">e12e8d49-f695-4d9a-bda2-a28843255615</td>
+                                                        <td class="text-wrap">689a5b86-5831-4f3d-905f-a0a70c506e5a</td>
                                                     </tr>
                                                     <tr>
                                                         <td class="text-nowrap">Host</td>
@@ -757,7 +757,7 @@ body.theme-light code {
                                             <tbody>
                                                 <tr>
                                                     <td class="text-nowrap">Date</td>
-                                                    <td class="text-wrap">Wed, 21 Jan 2026 20:53:44 GMT</td>
+                                                    <td class="text-wrap">Wed, 21 Jan 2026 21:07:35 GMT</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">Content-Type</td>
@@ -777,7 +777,7 @@ body.theme-light code {
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">Set-Cookie</td>
-                                                    <td class="text-wrap">INGRESSCOOKIE&#x3D;1769028825.59.26.186502|5c0ee527deb5851d7c49e79de25a81b3; Path&#x3D;/; Secure; HttpOnly</td>
+                                                    <td class="text-wrap">INGRESSCOOKIE&#x3D;1769029656.213.25.747077|5c0ee527deb5851d7c49e79de25a81b3; Path&#x3D;/; Secure; HttpOnly</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">Access-Control-Allow-Origin</td>
@@ -785,7 +785,7 @@ body.theme-light code {
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">RemainingCalls</td>
-                                                    <td class="text-wrap">35</td>
+                                                    <td class="text-wrap">39</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">TotalCalls</td>
@@ -810,10 +810,10 @@ body.theme-light code {
                                 <div class="card-body">
                                     <h5 class="card-title text-uppercase text-white text-center bg-info">Response Body</h5>
                                         <div class="dyn-height">
-                                                <pre><code id="copyText-858ff642-42e7-40e1-bddf-784d354581a9" class="prettyPrint">Invalid period specified</code></pre>
+                                                <pre><code id="copyText-42196761-f613-4b8c-b6ad-171b4495bdd4" class="prettyPrint">Invalid period specified</code></pre>
                                         </div>
                                         <div class="card-footer">
-                                            <button class="btn btn-outline-secondary btn-sm copyButton" type="button" data-clipboard-action="copy" data-clipboard-target="#copyText-858ff642-42e7-40e1-bddf-784d354581a9">Copy to Clipboard</button>
+                                            <button class="btn btn-outline-secondary btn-sm copyButton" type="button" data-clipboard-action="copy" data-clipboard-target="#copyText-42196761-f613-4b8c-b6ad-171b4495bdd4">Copy to Clipboard</button>
                                         </div>
                                 </div>
                             </div>
@@ -945,13 +945,13 @@ $('#openAll').on('click', function(e) {
 let clickCount = $(this).data("clickCount") || 1
 switch (clickCount){
     case 1:
-            $('#folder-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0').removeClass('collapsed')
-            $('#folder-collapse-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0').addClass('show')
+            $('#folder-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0').removeClass('collapsed')
+            $('#folder-collapse-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0').addClass('show')
         $('#openAll').html("Collapse Folders");
         break;
     case 2:
-            $('#folder-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0').addClass('collapsed')
-            $('#folder-collapse-0fa5ad99-26c2-4e7b-ba15-1fd4975109a5-iteration-0').removeClass('show')
+            $('#folder-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0').addClass('collapsed')
+            $('#folder-collapse-2511500d-3d7e-405c-b565-34c4ae968191-iteration-0').removeClass('show')
         $('#openAll').html("Expand Folders");
         break;
 }
@@ -967,17 +967,17 @@ $('#openAllRequests').on('click', function(e) {
 let clickCount = $(this).data("clickCount") || 1
 switch (clickCount){
     case 1:
-            $('#requests-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('collapsed')
-            $('#collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('collapsed')
-            $('#requests-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('show')
-            $('#collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('show')
+            $('#requests-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('collapsed')
+            $('#collapse-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('collapsed')
+            $('#requests-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('show')
+            $('#collapse-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('show')
         $('#openAllRequests').html("Collapse Requests");
         break;
     case 2:
-            $('#requests-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('collapsed')
-            $('#collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('collapsed')
-            $('#requests-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('show')
-            $('#collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('show')
+            $('#requests-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('collapsed')
+            $('#collapse-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('collapsed')
+            $('#requests-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('show')
+            $('#collapse-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('show')
         $('#openAllRequests').html("Expand Requests");
         break;
 }
@@ -993,17 +993,17 @@ $('#openAllSkipped').on('click', function(e) {
 let clickCount = $(this).data("clickCount") || 1
 switch (clickCount){
     case 1:
-            $('#skipped-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('collapsed')
-            $('#skipped-collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('collapsed')
-            $('#skipped-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('show')
-            $('#skipped-collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('show')
+            $('#skipped-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('collapsed')
+            $('#skipped-collapse-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('collapsed')
+            $('#skipped-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('show')
+            $('#skipped-collapse-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('show')
         $('#openAllSkipped').html("Collapse All Skipped Tests");
         break;
     case 2:
-            $('#skipped-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('collapsed')
-            $('#skipped-collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').addClass('collapsed')
-            $('#skipped-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('show')
-            $('#skipped-collapse-062099a5-53a9-491c-9f2e-2800e99baf1c').removeClass('show')
+            $('#skipped-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('collapsed')
+            $('#skipped-collapse-ba4a985f-4efe-4892-b897-9aa34423b182').addClass('collapsed')
+            $('#skipped-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('show')
+            $('#skipped-collapse-ba4a985f-4efe-4892-b897-9aa34423b182').removeClass('show')
         $('#openAllSkipped').html("Expand All Skipped Tests");
         break;
 }
